[gd_scene load_steps=8 format=3 uid="uid://cdnenomdavhgh"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_ag423"]
[ext_resource type="PackedScene" uid="uid://bihym4ymtm4m5" path="res://UI/settings_menu.tscn" id="2_8523o"]
[ext_resource type="Theme" uid="uid://den0jy5apluvv" path="res://UI/main_menu_theme.tres" id="2_oavik"]
[ext_resource type="FontFile" uid="uid://dc37pd247h0sh" path="res://UI/Font/Jumpers3DItalic-G33nm.otf" id="3_3s0j2"]

[sub_resource type="Animation" id="Animation_itnub"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PausedTxt:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0f1fj"]
resource_name = "glow"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PausedTxt:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 0, 1), Color(1, 0, 0, 1), Color(0.333333, 0.333333, 0, 1), Color(0.247059, 0.0823529, 0, 1), Color(0.580392, 0, 0, 1), Color(1, 1, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lmb0w"]
_data = {
"RESET": SubResource("Animation_itnub"),
"glow": SubResource("Animation_0f1fj")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ag423")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176471, 0.176471, 0.176471, 0.603922)
metadata/_edit_lock_ = true

[node name="ResumeBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 100.0
offset_right = 229.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../MainMenuBtn")
focus_neighbor_right = NodePath("../SettingsBtn")
theme = ExtResource("2_oavik")
theme_override_font_sizes/font_size = 90
text = "Resume"
flat = true

[node name="MainMenuBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -715.0
offset_top = -70.0
offset_right = -285.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_right = NodePath("../ResumeBtn")
theme = ExtResource("2_oavik")
theme_override_font_sizes/font_size = 50
text = "To Upgrade Menu"
flat = true

[node name="SettingsBtn" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 467.0
offset_top = -70.0
offset_right = 701.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../ResumeBtn")
theme = ExtResource("2_oavik")
theme_override_font_sizes/font_size = 50
text = "Settings"
flat = true

[node name="Buttons" type="Node" parent="."]

[node name="CodeHints" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HintTxt" type="Label" parent="CodeHints"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "↑↓→←"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PausedTxt" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -255.0
offset_top = 183.0
offset_right = 339.0
offset_bottom = 320.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = -2
theme_override_fonts/font = ExtResource("3_3s0j2")
theme_override_font_sizes/font_size = 150
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lmb0w")
}
autoplay = "glow"

[node name="SFX" type="AudioStreamPlayer" parent="."]
bus = &"Sound Effects"

[node name="SettingsMenu" parent="." instance=ExtResource("2_8523o")]
visible = false
z_index = 2
layout_mode = 1

[node name="ClearButton" parent="SettingsMenu" index="3"]
visible = false
disabled = true

[connection signal="pressed" from="ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="SettingsBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="hiding" from="SettingsMenu" to="." method="_on_settings_menu_hiding"]

[editable path="SettingsMenu"]
